Update (Add new features in edit mode of controller. Updated ImageViewer.)